logs/Slang/generated/keywords/5.6.2--keyword_untyped.sv.log
name: keyword_untyped
description: The 'untyped' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_untyped.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_untyped.sv:8:8: error: expected declarator
    bit untyped;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_untyped.sv:8:9: error: expected member
    bit untyped;
        ^~~~~~~
